<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>airdos_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yeojun0702@gmail.com">airon</maintainer>
  <license>TODO: License declaration</license>

    <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>


  


  <export>
    <architecture_independent/>
  </export>
</package>
